<resources>
    <string name="app_name">医德评价</string>
    <string name="login">Login Again</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_menu_alert">评价</string>
    <string name="tab_menu_profile">科室</string>
    <string name="tab_menu_pay">表彰</string>
    <string name="tab_menu_setting">主页</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="loginin">登录</string>
    <string name="exemple">在这里显示你的信息</string>
    <string name="commit">提交</string>
    <string name="cancel">放弃</string>
    <string name="resign">注册</string>
    <string name="acconttips">输入账号</string>
    <string name="pwdtip">输入密码</string>
    <string name="resign_login">注册并登录</string>
    <string name="look_evaluation">查看我的评价</string>
    <string name="self_evaluation">自我评价</string>
    <string name="evaluation_others">评价他人</string>
    <string name="textview">TextView</string>
    <string-array name="test_string_array">
        <item>请选择表彰项目</item>
        <item>锦旗表彰</item>
        <item>表扬信表彰</item>
        <item>拒收红包</item>
        <item>口头表彰</item>
        <item>其他表彰</item>
    </string-array>
</resources>
