<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="80dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="注册账号"
        android:textColor="@color/green"
        android:textSize="13sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"

        android:background="@color/lightgray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/circle"
            android:textColor="@color/darkgray"
            android:text="@string/account"
            android:textSize="13sp"
            />

        <EditText
            android:id="@+id/resign_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="5sp"
            android:paddingBottom="7sp"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/lightgray"
            android:layout_gravity="center_vertical"
            android:textSize="13sp"
            android:background="@null"
            android:hint="@string/acconttips"

            android:inputType="" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/lightgray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/circle"
            android:layout_marginRight="10dp"

            android:text="@string/password"
            android:textColor="@color/darkgray"
            android:textSize="13sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="7sp"
            android:paddingBottom="5sp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:textSize="13sp"
            android:hint="@string/pwdtip"
            android:textColor="@color/darkgray"
            android:textColorHint="@color/lightgray"
            android:inputType="textPassword" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"

        android:background="@color/lightgray"/>


    <Button
        android:id="@+id/resign_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:textSize="13sp"
        android:textColor="@color/lightgreen"
        android:text="@string/resign_login"
        tools:ignore="PxUsage" />


</LinearLayout>